--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,6 +28,131 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
+   <section class="promo">
+    <div class="container">
+        <div class="header">
+            <img src="logo/logo-1.png" alt="logo" class="header__logo">
+            <nav class="header__menu">
+                <ul class="header__item">
+                    <li class="header__link"><a href="#">Преимущества</a></li>
+                    <li class="header__link"><a href="#">Наши работы</a></li>
+                    <li class="header__link"><a href="#">Цены</a></li>
+                    <li class="header__link"><a href="#">Схема работы</a></li>
+                    <li class="header__link"><a href="#">Отзывы</a></li>
+                    <li class="header__link"><a href="#">Контанкты</a></li>
+                </ul>
+            </nav>
+            <div class="header__contacts">
+                <div class="header__phone">
+                    <div class="header__title">Есть вопросы?</div>
+                    <a href="tel:89264230100" class="header__phone">+7 (926) 423 01 00</a>
+                </div>
+                <button class="btn header__btn">Перезвоните мне</button>
+            </div>
+        </div>
+        <div class="promo__title">Global Opt - логистика полного цикла из Китая в Россию</div>
+        <h1 class="promo__header">ДОСТАВКА ГРУЗОВ ИЗ КИТАЯ</h1>
+        <h2 class="promo__subheader">В РОССИЮ И СНГ ВСЕМИ ВИДАМИ ТРАНСПОРТА</h2>
+        <div class="promo__divider"></div>
+        <div class="promo__wrapper">
+            <div class="promo__item">
+                <div class="promo__img"><img src="icons/icon-1.png" alt="icon" class="promo__icon"></div>
+                <div class="promo__descr">Перевозка негабаритных и крупнотоннажных грузов</div>
+            </div>
+            <div class="promo__item">
+                <div class="promo__img"><img src="icons/icon-2.png" alt="icon" class="promo__icon"></div>
+                <div class="promo__descr">Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</div>
+            </div>
+            <div class="promo__item">
+                <div class="promo__img"><img src="icons/icon-3.png" alt="icon" class="promo__icon"></div>
+                <div class="promo__descr">Осуществляем прямые поставки с заводов от двери до двери</div>
+            </div>
+            <div class="promo__item">
+                <div class="promo__img"><img src="icons/icon-4.png" alt="icon" class="promo__icon"></div>
+                <div class="promo__descr">Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг</div>
+            </div>
+        </div>
+        <button class="btn promo__btn">Получить расчет</button>
+    </div>
+   </section> 
+   <section class="advantages">
+    <div class="container">
+        <h2 class="title_fz26 advantages__header">Преимущества работы с GlobalOpt</h2>
+        <div class="advantages__grid">
+            <div class="advantages__item">
+                <div class="advantages__item__img">
+                    <img src="icons/ico-1.png" alt="advantage-icon" class="advantages__item__icon">
+                </div>
+                <div class="advantages__item__text">
+                    <div class="advantages__item__header">Офисы в Китае и России</div>
+                    <div class="advantages__item__descr">Офисы расположены в Москве, столице России.  И в Гуанчжоу, мировом торговом мегаполисе Китая.</div>
+                </div>
+            </div>
+            <div class="advantages__item">
+                <div class="advantages__item__img">
+                    <img src="icons/ico-2.png" alt="advantage-icon" class="advantages__item__icon">
+                </div>
+                <div class="advantages__item__text">
+                    <div class="advantages__item__header">Квалифицированные кадры</div>
+                    <div class="advantages__item__descr">Наши сотрудники имеют большой опыт в логистике с Китаем и в совершенстве владеют китайским и английским языками.</div>
+                </div>
+            </div>
+            <div class="advantages__item">
+                <div class="advantages__item__img">
+                    <img src="icons/ico-3.png" alt="advantage-icon" class="advantages__item__icon">
+                </div>
+                <div class="advantages__item__text">
+                    <div class="advantages__item__header">Собственный склад в Китае</div>
+                    <div class="advantages__item__descr">Свой склад в Китае, позволяет собирать и проверять и упаковывать  ваши товары, перед отправкой.</div>
+                </div>
+            </div>
+            <div class="advantages__item">
+                <div class="advantages__item__img">
+                    <img src="icons/ico-4.png" alt="advantage-icon" class="advantages__item__icon">
+                </div>
+                <div class="advantages__item__text">
+                    <div class="advantages__item__header">Делаем оптовые поставки под ключ</div>
+                    <div class="advantages__item__descr">Берём на себя все заботы связанные с  закупкой, проверкой на качество, логистикой и растаможкой. От вас требуется лишь заполнить техническое задание, одобрить  образцы товаров и после принять товар на своём складе!</div>
+                </div>
+            </div>
+            <div class="advantages__item">
+                <div class="advantages__item__img">
+                    <img src="icons/ico-5.png" alt="advantage-icon" class="advantages__item__icon">
+                </div>
+                <div class="advantages__item__text">
+                    <div class="advantages__item__header">Декларируем груз с оптимизацией</div>
+                    <div class="advantages__item__descr">Идем на встречу своим клиентам и помогаем растаможить груз с оптимизацией кодов и ставок.</div>
+                </div>
+            </div>
+            <div class="advantages__item">
+                <div class="advantages__item__img">
+                    <img src="icons/ico-6.png" alt="advantage-icon" class="advantages__item__icon">
+                </div>
+                <div class="advantages__item__text">
+                    <div class="advantages__item__header">Осуществляем поиск производителей</div>
+                    <div class="advantages__item__descr">Помогаем нашим клиентам найти интересующий вас товар или производителя в Китае.</div>
+                </div>
+            </div>
+            <div class="advantages__item">
+                <div class="advantages__item__img">
+                    <img src="icons/ico-7.png" alt="advantage-icon" class="advantages__item__icon">
+                </div>
+                <div class="advantages__item__text">
+                    <div class="advantages__item__header">Перевод денег в Китай</div>
+                    <div class="advantages__item__descr">Помогаем переводить и оплачивать товар в Китае на льготных условиях</div>
+                </div>
+            </div>
+            <div class="advantages__item">
+                <div class="advantages__item__img">
+                    <img src="icons/ico-8.png" alt="advantage-icon" class="advantages__item__icon">
+                </div>
+                <div class="advantages__item__text">
+                    <div class="advantages__item__header">Поездка на производство в Китай</div>
+                    <div class="advantages__item__descr">У нас большой опыт в бизнес поездках по Китаю. Мы с большой радостью и желанием организуем вам такую поездку в Китай под ключ. Сделаем визу, трансфер из аэропорта, забронируем отель, предоставим переводчика. Организуем поездку на производство. Шоп тур. Мебельный тур.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+   </section>
 </body>
 </html>
