--- a/src/index.html
+++ b/src/index.html
@@ -77,14 +77,14 @@
    </section> 
    <section class="advantages">
     <div class="container">
-        <h2 class="title_fz26 advantages__header">Преимущества работы с GlobalOpt</h2>
+        <h2 class="header_fz26 advantages__header">Преимущества работы с GlobalOpt</h2>
         <div class="advantages__grid">
             <div class="advantages__item">
                 <div class="advantages__item__img">
                     <img src="icons/ico-1.png" alt="advantage-icon" class="advantages__item__icon">
                 </div>
                 <div class="advantages__item__text">
-                    <div class="advantages__item__header">Офисы в Китае и России</div>
+                    <div class="header_min advantages__item__header">Офисы в Китае и России</div>
                     <div class="advantages__item__descr">Офисы расположены в Москве, столице России.  И в Гуанчжоу, мировом торговом мегаполисе Китая.</div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                     <img src="icons/ico-2.png" alt="advantage-icon" class="advantages__item__icon">
                 </div>
                 <div class="advantages__item__text">
-                    <div class="advantages__item__header">Квалифицированные кадры</div>
+                    <div class="header_min advantages__item__header">Квалифицированные кадры</div>
                     <div class="advantages__item__descr">Наши сотрудники имеют большой опыт в логистике с Китаем и в совершенстве владеют китайским и английским языками.</div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <img src="icons/ico-3.png" alt="advantage-icon" class="advantages__item__icon">
                 </div>
                 <div class="advantages__item__text">
-                    <div class="advantages__item__header">Собственный склад в Китае</div>
+                    <div class="header_min advantages__item__header">Собственный склад в Китае</div>
                     <div class="advantages__item__descr">Свой склад в Китае, позволяет собирать и проверять и упаковывать  ваши товары, перед отправкой.</div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                     <img src="icons/ico-4.png" alt="advantage-icon" class="advantages__item__icon">
                 </div>
                 <div class="advantages__item__text">
-                    <div class="advantages__item__header">Делаем оптовые поставки под ключ</div>
+                    <div class="header_min advantages__item__header">Делаем оптовые поставки под ключ</div>
                     <div class="advantages__item__descr">Берём на себя все заботы связанные с  закупкой, проверкой на качество, логистикой и растаможкой. От вас требуется лишь заполнить техническое задание, одобрить  образцы товаров и после принять товар на своём складе!</div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                     <img src="icons/ico-5.png" alt="advantage-icon" class="advantages__item__icon">
                 </div>
                 <div class="advantages__item__text">
-                    <div class="advantages__item__header">Декларируем груз с оптимизацией</div>
+                    <div class="header_min advantages__item__header">Декларируем груз с оптимизацией</div>
                     <div class="advantages__item__descr">Идем на встречу своим клиентам и помогаем растаможить груз с оптимизацией кодов и ставок.</div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                     <img src="icons/ico-6.png" alt="advantage-icon" class="advantages__item__icon">
                 </div>
                 <div class="advantages__item__text">
-                    <div class="advantages__item__header">Осуществляем поиск производителей</div>
+                    <div class="header_min advantages__item__header">Осуществляем поиск производителей</div>
                     <div class="advantages__item__descr">Помогаем нашим клиентам найти интересующий вас товар или производителя в Китае.</div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     <img src="icons/ico-7.png" alt="advantage-icon" class="advantages__item__icon">
                 </div>
                 <div class="advantages__item__text">
-                    <div class="advantages__item__header">Перевод денег в Китай</div>
+                    <div class="header_min advantages__item__header">Перевод денег в Китай</div>
                     <div class="advantages__item__descr">Помогаем переводить и оплачивать товар в Китае на льготных условиях</div>
                 </div>
             </div>
@@ -147,11 +147,121 @@
                     <img src="icons/ico-8.png" alt="advantage-icon" class="advantages__item__icon">
                 </div>
                 <div class="advantages__item__text">
-                    <div class="advantages__item__header">Поездка на производство в Китай</div>
+                    <div class="header_min advantages__item__header">Поездка на производство в Китай</div>
                     <div class="advantages__item__descr">У нас большой опыт в бизнес поездках по Китаю. Мы с большой радостью и желанием организуем вам такую поездку в Китай под ключ. Сделаем визу, трансфер из аэропорта, забронируем отель, предоставим переводчика. Организуем поездку на производство. Шоп тур. Мебельный тур.</div>
                 </div>
             </div>
         </div>
+    </div>
+   </section>
+   <section class="ourwork">
+    <div class="container">
+        <h2 class="header_fz26 ourwork__header">Наша работа - больше чем просто доставка</h2>
+        <hr>
+        <div class="subheader_fz21 ourwork__subheader">Мы организуем перевозки из Китая - оперативно и надежно, с учетом особенностей груза<br>и ваших требований по срокам и бюджету.</div>
+        <div class="ourwork__wrapper">
+            <div class="ourwork__item">
+                <img src="img/ourwork-1.png" alt="img" class="ourwork__item__img">
+                <div class="header_min ourwork__item__header">Страховка груза</div>
+                <div class="ourwork__item__descr">Все грузы, логистику которых осуществляет Global Opt, застрахованы. Мы гарантируем полное возмещение стоимости груза в случаях, предусмотренных страхо- вым соглашением. Все ваши тревоги наша компания берет на себя.</div>
+            </div>
+            <div class="ourwork__item">
+                <img src="img/ourwork-2.png" alt="img" class="ourwork__item__img">
+                <div class="header_min ourwork__item__header">Логистика последней мили</div>
+                <div class="ourwork__item__descr">Мы осуществляем доставку вашего груза до конкретного адреса. Привоз согласовывается менед- жерами по телефону, предварительно за сутки и за час до доставки. Также мы предоставляем услуги грузчи- ков по месту доставки груза.</div>
+            </div>
+            <div class="ourwork__item">
+                <img src="img/ourwork-3.png" alt="img" class="ourwork__item__img">
+                <div class="header_min ourwork__item__header">Мы всегда смотрим вперед</div>
+                <div class="ourwork__item__descr">Философия нашей компании, делать себя и своих партнеров по всему миру, успешными и богатыми. Поэтому мы всегда открыты к диалогу о партнерстве и инвестициях. </div>
+            </div>
+        </div>
+    </div>
+   </section>
+   <section class="agent">
+    <div class="container">
+        <div class="agent__round">
+            <img src="icons/agent.png" alt="icon" class="agent__icon">
+        </div>
+        <div class="header_fz26 agent__header">Агент в Китае</div>
+        <div class="agent__subheader">Русскоговорящие представители компании без труда найдут именно тот товар, который будет отвечать Вашим <br> запросам как по качеству, так и по цене.</div>
+    </div>
+   </section>
+   <section class="price">
+    <div class="container">
+        <div class="header_fz26 price__header">Цены на любой вариант доставки</div>
+        <hr>
+        <div class="subheader_fz21 price__subheader">Перевозки грузов на дальние расстояния без каких-либо ограничений.
+        Любой груз доставим вовремя. </div>
+        <div class="price__wrapper">
+            <div class="price__item">
+                <div class="price__item__header">Доставка морем</div>
+                <img src="icons/ic-1.png" alt="ship" class="price__item__icon">
+                <div class="price__item__title">Доставка 35-50 дней<br>
+                <span>от 0,3$ за 1 кг</span></div>
+                <div class="price__item__descr">Морские перевозки грузов из Китая в Россию за 35 дней 
+                с прохождением таможни</div>
+                <div class="btn price__item__btn">Подробнее</div>
+            </div>
+            <div class="price__item">
+                <div class="price__item__header">Ж/Д доставка</div>
+                <img src="icons/ic-2.png" alt="zug" class="price__item__icon">
+                <div class="price__item__title">Доставка 15-28 дней<br>
+                <span>от 1$ за 1 кг</span></div>
+                <div class="price__item__descr">ЖД перевозки грузов из Китая в Россию от 2 недель с прохождением таможни</div>
+                <div class="btn price__item__btn">Подробнее</div>
+            </div>
+            <div class="price__item">
+                <div class="price__item__header">Автодоставка</div>
+                <img src="icons/ic-3.png" alt="car" class="price__item__icon">
+                <div class="price__item__title">Доставка 12-20 дня<br>
+                <span>от 1$ за 1 кг</span></div>
+                <div class="price__item__descr">Автоперевозки грузов из Китая в Россию от 2 недель с прохождением таможни</div>
+                <div class="btn price__item__btn">Подробнее</div>
+            </div>
+            <div class="price__item">
+                <div class="price__item__header">Авиа доставка</div>
+                <img src="icons/ic-4.png" alt="airplane" class="price__item__icon">
+                <div class="price__item__title">Доставка 1-12 дней<br>
+                <span>от 6$ за 1 кг</span></div>
+                <div class="price__item__descr">Авиаперевозки грузов из Китая в Россию до 2 недель с прохождением таможни</div>
+                <div class="btn price__item__btn">Подробнее</div>
+            </div>
+        </div>
+        <div class="price__title">Заказать бесплатную консультацию</div>
+        <form action="#" class="price__form">
+            <div class="price__form__labelicon">
+                <div class="price__form__round">
+                    <img src="icons/price.png" alt="price-consult" class="price__form__icon">
+                </div>
+            </div>
+            <div class="price__input">
+                <input required name="name" type="text" placeholder="Ваше имя...">
+            </div>
+            <div class="price__input">
+                <input required name="phone" type="text" placeholder="Ваше номер телефона...">
+            </div>
+            <div class="price__input">
+                <input required name="email" type="email" placeholder="Ваш email...">
+            </div>
+            <div class="price__form__labelbtn">
+                <button class="btn price__form__btn">Оставить заявку</button>
+            </div>
+        </form>
+    </div>
+   </section>
+   <section class="manager agent">
+    <div class="container">
+        <div class="agent__round">
+            <img src="icons/manager.png" alt="icon" class="agent__icon">
+        </div>
+        <div class="header_fz26 agent__header">Менеджеры компании</div>
+        <div class="agent__subheader">Подберут для Вас оптимальную схему грузоперевозки. Проведут контроль закупок, организуют прямые <br> поставки от завода-изготовителя.</div>
+    </div>
+   </section>
+   <section class="scheme">
+    <div class="container">
+        <div class="header_fz26 scheme__header">Схема работы с нами</div>
     </div>
    </section>
 </body>
