--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -163,17 +165,17 @@
             <div class="ourwork__item">
                 <img src="img/ourwork-1.png" alt="img" class="ourwork__item__img">
                 <div class="header_min ourwork__item__header">Страховка груза</div>
-                <div class="ourwork__item__descr">Все грузы, логистику которых осуществляет Global Opt, застрахованы. Мы гарантируем полное возмещение стоимости груза в случаях, предусмотренных страхо- вым соглашением. Все ваши тревоги наша компания берет на себя.</div>
+                <div class="subheader_min ourwork__item__descr">Все грузы, логистику которых осуществляет Global Opt, застрахованы. Мы гарантируем полное возмещение стоимости груза в случаях, предусмотренных страхо- вым соглашением. Все ваши тревоги наша компания берет на себя.</div>
             </div>
             <div class="ourwork__item">
                 <img src="img/ourwork-2.png" alt="img" class="ourwork__item__img">
                 <div class="header_min ourwork__item__header">Логистика последней мили</div>
-                <div class="ourwork__item__descr">Мы осуществляем доставку вашего груза до конкретного адреса. Привоз согласовывается менед- жерами по телефону, предварительно за сутки и за час до доставки. Также мы предоставляем услуги грузчи- ков по месту доставки груза.</div>
+                <div class="subheader_min ourwork__item__descr">Мы осуществляем доставку вашего груза до конкретного адреса. Привоз согласовывается менед- жерами по телефону, предварительно за сутки и за час до доставки. Также мы предоставляем услуги грузчи- ков по месту доставки груза.</div>
             </div>
             <div class="ourwork__item">
                 <img src="img/ourwork-3.png" alt="img" class="ourwork__item__img">
                 <div class="header_min ourwork__item__header">Мы всегда смотрим вперед</div>
-                <div class="ourwork__item__descr">Философия нашей компании, делать себя и своих партнеров по всему миру, успешными и богатыми. Поэтому мы всегда открыты к диалогу о партнерстве и инвестициях. </div>
+                <div class="subheader_min ourwork__item__descr">Философия нашей компании, делать себя и своих партнеров по всему миру, успешными и богатыми. Поэтому мы всегда открыты к диалогу о партнерстве и инвестициях. </div>
             </div>
         </div>
     </div>
@@ -237,11 +239,7 @@
             </div>
             <div class="price__input">
                 <input required name="name" type="text" placeholder="Ваше имя...">
-            </div>
-            <div class="price__input">
                 <input required name="phone" type="text" placeholder="Ваше номер телефона...">
-            </div>
-            <div class="price__input">
                 <input required name="email" type="email" placeholder="Ваш email...">
             </div>
             <div class="price__form__labelbtn">
@@ -262,7 +260,74 @@
    <section class="scheme">
     <div class="container">
         <div class="header_fz26 scheme__header">Схема работы с нами</div>
+        <div class="scheme__wrapper">
+            <div class="scheme__item">
+                <img src="icons/icon_1.png" alt="icon" class="scheme__item__img">
+                <div class="header_min scheme__item__header">Заявка</div>
+                <div class="subheader_min scheme__item__descr">Вы оставляете заявку на нашем сайте или звоните нам</div>
+            </div>
+            <div class="scheme__item">
+                <img src="icons/icon_2.png" alt="icon" class="scheme__item__img">
+                <div class="header_min scheme__item__header">Аналитика доставки</div>
+                <div class="subheader_min scheme__item__descr">Мы просчитываем варианты доставки Вашего груза</div>
+            </div>
+            <div class="scheme__item">
+                <img src="icons/icon_3.png" alt="icon" class="scheme__item__img">
+                <div class="header_min scheme__item__header">Договор</div>
+                <div class="subheader_min scheme__item__descr">Заключаем с Вами договор о поставке груза из Китая</div>
+            </div>
+            <div class="scheme__item">
+                <img src="icons/icon_4.png" alt="icon" class="scheme__item__img">
+                <div class="header_min scheme__item__header">Доставка на наш склад</div>
+                <div class="subheader_min scheme__item__descr">Связываемся с Вашим поставщиком в Китае и договариваемся о доставке груза на наш склад</div>
+            </div>
+            <div class="scheme__item">
+                <img src="icons/icon_5.png" alt="icon" class="scheme__item__img">
+                <div class="header_min scheme__item__header">Проверка груза</div>
+                <div class="subheader_min scheme__item__descr">Мы проверяем, собираем и упаковываем перед отправкой Ваш груз на своём складе</div>
+            </div>
+            <div class="scheme__item">
+                <img src="icons/icon_6.png" alt="icon" class="scheme__item__img">
+                <div class="header_min scheme__item__header">Доставка груза</div>
+                <div class="subheader_min scheme__item__descr">Мы перевозим ваш груз до места назначения и производим таможенную очистку</div>
+            </div>
+            <div class="scheme__item">
+                <img src="icons/icon_7.png" alt="icon" class="scheme__item__img">
+                <div class="header_min scheme__item__header">Оплата</div>
+                <div class="subheader_min scheme__item__descr">Оплачиваете доставку груза при получении</div>
+            </div>
+        </div>
     </div>
    </section>
+   <section class="reviews">
+    <div class="container">
+        <div class="header_fz26 reviews__header">отзывы наших клиентов</div>
+        <hr>
+        <div class="subheader_fz21 reviews__subheader">Мы всегда стараемся помочь клиентам, что бы они обращались к нам снова</div>
+    </div>
+    <div class="carousel">
+        <div class="reviews__slider">
+            <div class="reviews__slider__item">
+                <img src="img/slider1.png" alt="slide">
+                <div class="reviews__slider__descr">Анисимова Ольга<br><br>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+            </div>
+            <div class="reviews__slider__item">
+                <img src="img/ourwork-1.png" alt="slide">
+                <div class="reviews__slider__descr">Анисимова Олэк<br><br>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+            </div>
+            <div class="reviews__slider__item">
+                <img src="img/ourwork-1.png" alt="slide">
+                <div class="reviews__slider__descr">Анисимова Ольгек<br><br>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+            </div>
+          </div>
+    </div>
+   </section>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
