--- a/src/index.html
+++ b/src/index.html
@@ -309,17 +309,27 @@
         <div class="reviews__slider">
             <div class="reviews__slider__item">
                 <img src="img/slider1.png" alt="slide">
-                <div class="reviews__slider__descr">Анисимова Ольга<br><br>
+                <div class="subheader_min reviews__slider__descr"> <b>Анисимова Ольга</b><br><br>
                     Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
             </div>
             <div class="reviews__slider__item">
                 <img src="img/ourwork-1.png" alt="slide">
-                <div class="reviews__slider__descr">Анисимова Олэк<br><br>
+                <div class="subheader_min reviews__slider__descr"><b>Дмитрий Иванов</b><br><br>
                     Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
             </div>
             <div class="reviews__slider__item">
                 <img src="img/ourwork-1.png" alt="slide">
-                <div class="reviews__slider__descr">Анисимова Ольгек<br><br>
+                <div class="subheader_min reviews__slider__descr"><b>Сергей валиев</b><br><br>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+            </div>
+            <div class="reviews__slider__item">
+                <img src="img/ourwork-1.png" alt="slide">
+                <div class="subheader_min reviews__slider__descr"><b>Анисимова Ольга</b><br><br>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+            </div>
+            <div class="reviews__slider__item">
+                <img src="img/ourwork-1.png" alt="slide">
+                <div class="subheader_min reviews__slider__descr"><b>Анисимова Ольга</b><br><br>
                     Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
             </div>
           </div>
