--- a/src/index.html
+++ b/src/index.html
@@ -308,31 +308,85 @@
     <div class="carousel">
         <div class="reviews__slider">
             <div class="reviews__slider__item">
-                <img src="img/slider1.png" alt="slide">
+                <img src="img/photo.png" alt="slide">
                 <div class="subheader_min reviews__slider__descr"> <b>Анисимова Ольга</b><br><br>
-                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск<br> и анализ определенного товара. Доставляла через компанию уже много раз, от расходных<br> материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользоваться<br> услугами даной компании</div>
             </div>
             <div class="reviews__slider__item">
-                <img src="img/ourwork-1.png" alt="slide">
+                <img src="img/photo_2.png" alt="slide">
                 <div class="subheader_min reviews__slider__descr"><b>Дмитрий Иванов</b><br><br>
-                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск<br> и анализ определенного товара. Доставляла через компанию уже много раз, от расходных<br> материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользоваться<br> услугами даной компании</div>
             </div>
             <div class="reviews__slider__item">
-                <img src="img/ourwork-1.png" alt="slide">
-                <div class="subheader_min reviews__slider__descr"><b>Сергей валиев</b><br><br>
-                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+                <img src="img/photo_1.png" alt="slide">
+                <div class="subheader_min reviews__slider__descr"><b>Александра Атаева</b><br><br>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск<br> и анализ определенного товара. Доставляла через компанию уже много раз, от расходных<br> материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользоваться<br> услугами даной компании</div>
+            </div>
+            <div class="reviews__slider__item">
+                <img src="img/photo_3.png" alt="slide">
+                <div class="subheader_min reviews__slider__descr"><b>Анисимова Ольга</b><br><br>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск<br> и анализ определенного товара. Доставляла через компанию уже много раз, от расходных<br> материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользоваться<br> услугами даной компании</div>
             </div>
             <div class="reviews__slider__item">
                 <img src="img/ourwork-1.png" alt="slide">
                 <div class="subheader_min reviews__slider__descr"><b>Анисимова Ольга</b><br><br>
-                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
-            </div>
-            <div class="reviews__slider__item">
-                <img src="img/ourwork-1.png" alt="slide">
-                <div class="subheader_min reviews__slider__descr"><b>Анисимова Ольга</b><br><br>
-                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск<br> и анализ определенного товара. Доставляла через компанию уже много раз, от расходных<br> материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользоваться<br> услугами даной компании</div>
             </div>
           </div>
+    </div>
+   </section>
+   <section class="writetous">
+    <div class="container">
+        <div class="writetous__form">
+            <div class="writetous__form__header">
+                <div class="writetous__form__title">Остались вопросы?</div>
+                <div class="writetous__form__subtitle">Напишите нам!</div>
+            </div>
+            <form action="#">
+                <div class="writetous__form__input price__input">
+                    <input required name="name" type="text" placeholder="Ваше имя...">
+                    <input required name="phone" type="text" placeholder="Ваше номер телефона...">
+                    <input required name="email" type="email" placeholder="Ваш email...">
+                    <textarea required name="text" id="text" placeholder="Сообщение..." class="writetous__form__textarea"></textarea>
+                </div>
+                
+                <button class="btn writetous__form__btn">Оставить заявку</button>
+            </form>
+        </div>
+    </div>
+   </section>
+   <section class="footer">
+    <div class="footer__map">
+        <div class="footer__map__leg">
+            <div class="footer__map__descr">
+                <span>г. Москва</span><br>
+                ул. Садовническая, дом 5, офис 4-6 <br> 
+                700 от м. Новокузнецкая<br>
+                Тел: +7 (926) 423 01 00 <br>
+                <span><a href="#">info@glopt.ru</a></span>
+            </div>
+        </div>
+
+        <div style="position:relative;overflow:unset;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/sadovnicheskaya_ulitsa_5/Z04YcAVnS0QGQFtvfXt1dnVmYg==/?ll=37.627212%2C55.747956&utm_medium=mapframe&utm_source=maps&z=16.63" style="color:#eee;font-size:12px;position:absolute;top:14px;"></a><iframe src="https://yandex.ru/map-widget/v1/?ll=37.627212%2C55.747956&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjcxMDM5NBJE0KDQvtGB0YHQuNGPLCDQnNC%2B0YHQutCy0LAsINCh0LDQtNC%2B0LLQvdC40YfQtdGB0LrQsNGPINGD0LvQuNGG0LAsIDUiCg1DghZCFej9XkI%3D&z=16.63" width="99.7%" height="500px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+    </div>
+    <div class="container">
+        <div class="footer__up header">
+            <img src="logo/logo-1.png" alt="logo" class="footer__up__logo header__logo">
+            <div class="footer__up__title">Global Opt - Доставка грузов из Китая в Россию и СНГ</div>
+            <div class="header__contacts">
+                <div class="header__phone">
+                    <div class="header__title">Есть вопросы?</div>
+                    <a href="tel:89264230100" class="header__phone">+7 (926) 423 01 00</a>
+                </div>
+                <button class="btn header__btn">Перезвоните мне</button>
+            </div>
+        </div>
+        <hr>
+        <div class="footer__down">
+            <div class="footer__down__title">© 2010 Scratch.com.ua</div>
+            <div class="footer__down__title">Политика конфидециальности</div>
+            <div class="footer__down__title">Создание сайта:<img src="logo/logo-3.png" alt="logo"></div>
+        </div>
     </div>
    </section>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
