--- a/src/index.html
+++ b/src/index.html
@@ -365,9 +365,10 @@
                 Тел: +7 (926) 423 01 00 <br>
                 <span><a href="#">info@glopt.ru</a></span>
             </div>
+            <div class="footer__map__close">×</div>
         </div>
 
-        <div style="position:relative;overflow:unset;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/sadovnicheskaya_ulitsa_5/Z04YcAVnS0QGQFtvfXt1dnVmYg==/?ll=37.627212%2C55.747956&utm_medium=mapframe&utm_source=maps&z=16.63" style="color:#eee;font-size:12px;position:absolute;top:14px;"></a><iframe src="https://yandex.ru/map-widget/v1/?ll=37.627212%2C55.747956&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjcxMDM5NBJE0KDQvtGB0YHQuNGPLCDQnNC%2B0YHQutCy0LAsINCh0LDQtNC%2B0LLQvdC40YfQtdGB0LrQsNGPINGD0LvQuNGG0LAsIDUiCg1DghZCFej9XkI%3D&z=16.63" width="99.7%" height="500px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+        <div style="position:relative;overflow:unset;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/sadovnicheskaya_ulitsa_5/Z04YcAVnS0QGQFtvfXt1dnVmYg==/?ll=37.627212%2C55.747956&utm_medium=mapframe&utm_source=maps&z=16.63" style="color:#eee;font-size:12px;position:absolute;top:14px;"></a><iframe src="https://yandex.ru/map-widget/v1/?ll=37.627212%2C55.747956&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjcxMDM5NBJE0KDQvtGB0YHQuNGPLCDQnNC%2B0YHQutCy0LAsINCh0LDQtNC%2B0LLQvdC40YfQtdGB0LrQsNGPINGD0LvQuNGG0LAsIDUiCg1DghZCFej9XkI%3D&z=16.63" width="99.5%" height="500px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
     </div>
     <div class="container">
         <div class="footer__up header">
